	PR c++/27398 	* decl.c (grokdeclarator): Return error_mark_node instead of NULL_TREE 	or void_type_node.

* g++.dg/template/crash50.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113950 138bc75d-0d04-0410-961f-82ee72b054a4